# ComfyUI-BrushNet

./: .gitignore  BIG_IMAGE.md  CN.md  PARAMS.md  RAUNET.md  README.md  __init__.py  brushnet_nodes.py  model_patch.py  pyproject.toml  raunet_nodes.py  requirements.txt
.github/workflows/: publish.yml
brushnet/: brushnet.json  brushnet.py  brushnet_ca.py  brushnet_xl.json  pipeline_brushnet.py  pipeline_brushnet_powerpaint_ca.py  pipeline_brushnet_sd_xl.py  pipeline_powerpaint_brushnet_ca.py  powerpaint.json  powerpaint_utils.py  unet_2d_blocks.py  unet_2d_condition.py
example/: BrushNet basic.json  BrushNet example.json  BrushNet with LoRA.json  BrushNet_SDXL_basic.json  BrushNet_SDXL_upscale.json  BrushNet_basic.json  BrushNet_cut_for_inpaint.json  BrushNet_image_batch.json  BrushNet_image_big_batch.json  BrushNet_inpaint.json  BrushNet_with_CN.json  BrushNet_with_ELLA.json  BrushNet_with_IPA.json  BrushNet_with_LoRA.json  PowerPaint_object_removal.json  PowerPaint_outpaint.json  RAUNet_basic.json  RAUNet_with_CN.json  sleepeng_cat_ce.png~
